# stock-trading-journal

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
.trae/documents/: arch.md  prd.md
scripts/: build.js
src/: App.tsx  index.css  stockApi.ts  store.ts  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Navbar.tsx  RecordTradeModal.tsx  ReviewForm.tsx  SidebarItem.tsx  Toast.tsx  TradeForm.tsx
src/pages/: Dashboard.tsx  MistakeAnalysis.tsx  Performance.tsx  Portfolio.tsx  Statistics.tsx  TradeAnalysis.tsx  TradeList.tsx  TradeReview.tsx  Watchlist.tsx
